--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -302,26 +302,26 @@
         <item>10</item>
     </integer-array>
 
-    <!-- Workaround for devices with broken keyboards -->
-    <bool name="config_forceDisableHardwareKeyboard">true</bool>
+    <!-- Workaround for devices with broken keyboards
+    <bool name="config_forceDisableHardwareKeyboard">true</bool-->
 
     <!-- Indicate whether the SD card is accessible without removing the battery. -->
     <bool name="config_batterySdCardAccessibility">true</bool>
 
-    <!-- Disable the home key unlock setting -->
-    <bool name="config_disableHomeUnlockSetting">false</bool>
+    <!-- Disable the home key unlock setting 
+    <bool name="config_disableHomeUnlockSetting">false</bool-->
 
     <bool name="config_enableWifiDisplay">true</bool>
 
     <!-- Flag indicating if the speed up audio on mt call code should be executed -->
     <bool name="config_speed_up_audio_on_mt_calls">true</bool>
 
-    <!-- Panel auto brightness value -->
-    <integer name="config_panelAutoBrightnessValue">1</integer>
+    <!-- Panel auto brightness value 
+    <integer name="config_panelAutoBrightnessValue">1</integer-->
 
     <!-- empty string to disable, or eg: /sys/kernel/fast_charge/force_fast_charge
          for a custom path the delivered kernel supports.
-         it is disabled by default so devices need to add an overlay to enable -->
-    <string name="config_fastChargePath" translatable="false">/sys/kernel/fast_charge/force_fast_charge</string>
+         it is disabled by default so devices need to add an overlay to enable 
+    <string name="config_fastChargePath" translatable="false">/sys/kernel/fast_charge/force_fast_charge</string-->
 
 </resources>
