--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -270,8 +270,9 @@
             32 - Camera
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
-         config to 7. -->
-    <integer name="config_deviceHardwareWakeKeys">65</integer>
+         config to 7. 
+	Commented out since Slim FWB does not support yet. -->
+    <!--integer name="config_deviceHardwareWakeKeys">65</integer-->
 
     <!-- Panel auto brightness value -->
     <!--integer name="config_panelAutoBrightnessValue">1</integer-->
